--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "ui",
-  "version": "1.0.0",
+  "name": "@stylospectrum/ui",
+  "version": "0.0.1",
   "description": "",
   "main": "es/index.js",
   "typings": "es/index.d.ts",
@@ -17,7 +17,13 @@
     "lint:script": "eslint . --ext .js,.jsx,.ts,.tsx",
     "lint:style": "stylelint 'src/**/*.scss'",
     "tsc": "tsc --noEmit",
-    "format": "prettier \"**/*.{cjs,html,js,json,md,ts}\" --ignore-path ./.eslintignore --write"
+    "format": "prettier \"**/*.{cjs,html,js,json,md,ts}\" --ignore-path ./.eslintignore --write",
+    "prepare": "husky install"
+  },
+  "lint-staged": {
+    "*.less": "stylelint --fix",
+    "*": "prettier -c --write",
+    "*.{.js,.jsx,.ts,.tsx}": "eslint --fix --ext .js,.jsx,.ts,.tsx"
   },
   "author": "",
   "license": "ISC",
@@ -25,6 +31,8 @@
     "@babel/plugin-proposal-decorators": "^7.23.2",
     "@babel/preset-env": "^7.23.2",
     "@babel/preset-typescript": "^7.23.2",
+    "@commitlint/cli": "^17.8.0",
+    "@commitlint/config-conventional": "^17.8.0",
     "@lit/react": "^1.0.0",
     "@storybook/addon-essentials": "^7.5.0",
     "@storybook/addon-links": "^7.5.0",
@@ -34,6 +42,7 @@
     "@types/vfile-message": "^2.0.0",
     "@typescript-eslint/eslint-plugin": "^6.8.0",
     "eslint": "^8.51.0",
+    "husky": "^8.0.3",
     "lint-staged": "^15.0.2",
     "lit": "^3.0.0",
     "lit-analyzer": "^1.2.1",
