--- a/.github/workflows/publish-package.yml
+++ b/.github/workflows/publish-package.yml
@@ -5,7 +5,7 @@ on:
       - main
     types: [closed]
 jobs:
-  build:
+  build-package:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -18,6 +18,6 @@ jobs:
       - name: Install dependencies and build 🔧
         run: yarn && yarn run build-package
       - name: Publish package on NPM 📦
-        run: npm publish
+        run: npm publish --access=public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
