--- a/.github/workflows/deploy-storybook.yml
+++ b/.github/workflows/deploy-storybook.yml
@@ -1,6 +1,9 @@
 name: Deploy Storybook to Github Page
 on:
-  push:
+  pull_request:
+    branches:
+      - main
+    types: [closed]
     paths: ['src/**']
 jobs:
   build-storybook:
