--- a/.github/workflows/deploy-storybook.yml
+++ b/.github/workflows/deploy-storybook.yml
@@ -4,7 +4,7 @@ on:
     branches:
       - main
     types: [closed]
-    paths: ['src/**']
+    # paths: ['src/**']
 jobs:
   build-storybook:
     runs-on: ubuntu-latest
