chore: update something

--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "name": "@stylospectrum/ui",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "",
   "main": "es/index.js",
   "typings": "es/index.d.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "storybook": "storybook dev -p 6006",
-    "build-package": "rm -rf es && tsc && node scripts/copy-scss-to-es.js",
+    "storybook": "yarn gen-docs && storybook dev -p $(grep PORT .env | cut -d '=' -f2)",
+    "build-package": "rm -rf es && tsc && sass-to-string",
     "build-storybook": "storybook build",
-    "lint:lit-analyzer": "lit-analyzer",
+    "lint:lit-analyzer": "lit-analyzer --strict --rules.no-invalid-directive-binding warn",
     "lint": "npm run lint:lit-analyzer && npm run tsc && npm run lint:script && npm run lint:style",
     "lint-fix": "npm run lint-fix:script && npm run lint-fix:style",
     "lint-fix:script": "npm run lint:script -- --fix",
@@ -18,7 +18,8 @@
     "lint:style": "stylelint 'src/**/*.scss'",
     "tsc": "tsc --noEmit",
     "format": "prettier \"**/*.{cjs,html,js,json,md,ts}\" --ignore-path ./.eslintignore --write",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "gen-docs": "custom-elements-manifest analyze --litelement --exclude \"(src/**/(React|stories).ts|src/index.ts)\" --outdir=.storybook"
   },
   "lint-staged": {
     "*.scss": "stylelint --fix",
@@ -28,20 +29,21 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@babel/plugin-proposal-decorators": "^7.23.2",
-    "@babel/preset-env": "^7.23.2",
-    "@babel/preset-typescript": "^7.23.2",
     "@commitlint/cli": "^17.8.0",
     "@commitlint/config-conventional": "^17.8.0",
+    "@custom-elements-manifest/analyzer": "^0.9.0",
     "@lit/react": "^1.0.0",
-    "@storybook/addon-essentials": "^7.5.0",
-    "@storybook/addon-links": "^7.5.0",
-    "@storybook/blocks": "^7.5.0",
-    "@storybook/web-components": "^7.5.0",
-    "@storybook/web-components-webpack5": "^7.5.0",
+    "@storybook/addon-essentials": "^7.5.2",
+    "@storybook/addon-links": "^7.5.2",
+    "@storybook/blocks": "^7.5.2",
+    "@storybook/web-components": "^7.5.2",
+    "@storybook/web-components-webpack5": "^7.5.2",
     "@types/vfile-message": "^2.0.0",
     "@typescript-eslint/eslint-plugin": "^6.8.0",
+    "@typescript-eslint/parser": "^6.9.1",
+    "@whitespace/storybook-addon-html": "^5.1.6",
     "eslint": "^8.51.0",
+    "eslint-plugin-storybook": "^0.6.15",
     "husky": "^8.0.3",
     "lint-staged": "^15.0.2",
     "lit": "^3.0.0",
@@ -50,15 +52,19 @@
     "prettier": "^3.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-syntax-highlighter": "^15.5.0",
+    "sass": "^1.69.5",
     "sass-loader": "^13.3.2",
     "sass-to-string": "^1.6.3",
-    "storybook": "^7.5.0",
+    "storybook": "^7.5.2",
     "stylelint": "^15.10.3",
     "stylelint-config-prettier": "^9.0.5",
     "stylelint-config-rational-order": "^0.1.2",
     "stylelint-config-standard": "^34.0.0",
     "stylelint-declaration-block-no-ignored-properties": "^2.7.0",
     "stylelint-order": "^6.0.3",
+    "ts-lit-plugin": "^2.0.1",
+    "ts-loader": "^9.5.0",
     "typescript": "^5.2.2"
   }
 }
