--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "target": "es2021",
+    "target": "esnext",
     "module": "es2020",
     "lib": ["es2021", "DOM", "DOM.Iterable"],
     "declaration": true,
@@ -8,7 +8,6 @@
     "sourceMap": true,
     "inlineSources": true,
     "outDir": "./es",
-    "rootDir": "./src",
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
@@ -17,11 +16,23 @@
     "noImplicitAny": true,
     "noImplicitThis": true,
     "moduleResolution": "node",
+    "allowJs": true,
     "allowSyntheticDefaultImports": true,
     "experimentalDecorators": true,
     "forceConsistentCasingInFileNames": true,
-    "noImplicitOverride": true
+    "noImplicitOverride": true,
+    "useDefineForClassFields": false,
+    "resolveJsonModule": true
   },
-  "include": ["**/*"],
-  "exclude": ["node_modules", "src/**/stories.ts"]
+  "plugins": [
+    {
+      "name": "ts-lit-plugin",
+      "strict": true,
+      "rules": {
+        "no-invalid-directive-binding": "warn"
+      }
+    }
+  ],
+  "include": ["src/*", "typings/*"],
+  "exclude": ["node_modules"]
 }
