chore(deps): change stylelint plugin

--- a/package.json
+++ b/package.json
@@ -60,11 +60,9 @@
     "sass-to-string": "^1.6.3",
     "storybook": "^7.5.3",
     "stylelint": "^15.10.3",
-    "stylelint-config-prettier": "^9.0.5",
     "stylelint-config-rational-order": "^0.1.2",
     "stylelint-config-standard": "^34.0.0",
-    "stylelint-declaration-block-no-ignored-properties": "^2.7.0",
-    "stylelint-order": "^6.0.3",
+    "stylelint-prettier": "^4.0.0",
     "ts-lit-plugin": "^2.0.1",
     "ts-loader": "^9.5.0",
     "typescript": "^5.2.2"
