feat: introduce new component: Checkbox, Label

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "storybook": "npm run gen-docs && storybook dev -p $(grep PORT .env | cut -d '=' -f2)",
     "build-package": "rm -rf dist && tsc -p tsconfig.package.json && sass-to-string",
     "build-storybook": "storybook build",
-    "lint:lit-analyzer": "lit-analyzer",
+    "lint:lit-analyzer": "lit-analyzer --rules.no-incompatible-type-binding warn",
     "lint": "npm run lint:lit-analyzer && npm run tsc && npm run lint:script && npm run lint:style",
     "lint-fix": "npm run lint-fix:script && npm run lint-fix:style",
     "lint-fix:script": "npm run lint:script -- --fix",
@@ -36,11 +36,11 @@
     "@commitlint/config-conventional": "^17.8.0",
     "@custom-elements-manifest/analyzer": "^0.9.0",
     "@lit/react": "^1.0.0",
-    "@storybook/addon-essentials": "^7.6.4",
-    "@storybook/addon-links": "^7.6.4",
-    "@storybook/blocks": "^7.6.4",
-    "@storybook/web-components": "^7.6.4",
-    "@storybook/web-components-webpack5": "^7.6.4",
+    "@storybook/addon-essentials": "^7.6.5",
+    "@storybook/addon-links": "^7.6.5",
+    "@storybook/blocks": "^7.6.5",
+    "@storybook/web-components": "^7.6.5",
+    "@storybook/web-components-webpack5": "^7.6.5",
     "@types/vfile-message": "^2.0.0",
     "@typescript-eslint/eslint-plugin": "^6.8.0",
     "@typescript-eslint/parser": "^6.9.1",
@@ -58,7 +58,7 @@
     "sass": "^1.69.5",
     "sass-loader": "^13.3.2",
     "sass-to-string": "^1.6.3",
-    "storybook": "^7.6.4",
+    "storybook": "^7.6.5",
     "stylelint": "^15.10.3",
     "stylelint-config-rational-order": "^0.1.2",
     "stylelint-config-standard": "^34.0.0",
