--- a/package.json
+++ b/package.json
@@ -66,8 +66,9 @@
     "typescript": "^5.2.2"
   },
   "dependencies": {
+    "@lit/context": "^1.1.0",
+    "@lit/react": "^1.0.0",
     "async-validator": "^4.2.5",
-    "lit": "^3.0.0",
-    "@lit/react": "^1.0.0"
+    "lit": "^3.0.0"
   }
 }
